Add basic image gallery

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="style.app">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -11,8 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".gallery.StylePhotoActivity"></activity>
-        <activity android:name=".gallery.GalleryActivity">
+        <activity android:name=".controller.StylePhotoActivity"></activity>
+        <activity android:name=".controller.GalleryActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
