--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
+    implementation 'com.android.support:appcompat-v7:28.0.0'
 }
