--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
     implementation 'com.android.support:appcompat-v7:28.0.0'
     testImplementation "io.mockk:mockk:1.9"
-      testImplementation 'org.robolectric:robolectric:4.3'
+    testImplementation 'org.robolectric:robolectric:4.3'
+    testImplementation("com.squareup.okhttp3:mockwebserver:4.3.1")
+    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-test', version: '1.1.51'
 }
+
 
